apps/bogen-web/cluster/labk3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bogen-web
  annotations:
    tailscale.com/funnel: "true"
    tailscale.com/tags: tag:homelab
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bogen-web
                port:
                  name: http
  tls:
    - hosts:
        - bogen-web
